--- a/frontend/register.html
+++ b/frontend/register.html
@@ -47,11 +47,30 @@
                         <div class="grid gap-y-4">
                             <!-- Form Group -->
                             <div>
+                                <label for="name" class="block text-sm mb-2">Full Name</label>
+                                <div class="relative">
+                                    <input type="text" id="name" name="name"
+                                        class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                                        required aria-describedby="name-error" placeholder="Sultan Muhammad Alp Arslan">
+                                    <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
+                                        <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor"
+                                            viewBox="0 0 16 16" aria-hidden="true">
+                                            <path
+                                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
+                                        </svg>
+                                    </div>
+                                </div>
+                                <p class="hidden text-xs text-red-600 mt-2" id="name-error">Please provide a name</p>
+                            </div>
+                            <!-- End Form Group -->
+
+                            <!-- Form Group -->
+                            <div>
                                 <label for="email" class="block text-sm mb-2">Email address</label>
                                 <div class="relative">
                                     <input type="email" id="email" name="email"
                                         class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                                        required aria-describedby="email-error">
+                                        required aria-describedby="email-error" placeholder="example@mail.com">
                                     <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
                                         <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor"
                                             viewBox="0 0 16 16" aria-hidden="true">
@@ -71,7 +90,7 @@
                                 <div class="relative">
                                     <input type="password" id="password" name="password"
                                         class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                                        required aria-describedby="password-error">
+                                        required aria-describedby="password-error" placeholder="••••••••">
                                     <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
                                         <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor"
                                             viewBox="0 0 16 16" aria-hidden="true">
@@ -82,26 +101,6 @@
                                 </div>
                                 <p class="hidden text-xs text-red-600 mt-2" id="password-error">8+ characters required
                                 </p>
-                            </div>
-                            <!-- End Form Group -->
-
-                            <!-- Form Group -->
-                            <div>
-                                <label for="confirm-password" class="block text-sm mb-2">Confirm Password</label>
-                                <div class="relative">
-                                    <input type="password" id="confirm-password" name="confirm-password"
-                                        class="py-3 px-4 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                                        required aria-describedby="confirm-password-error">
-                                    <div class="hidden absolute inset-y-0 end-0 pointer-events-none pe-3">
-                                        <svg class="size-5 text-red-500" width="16" height="16" fill="currentColor"
-                                            viewBox="0 0 16 16" aria-hidden="true">
-                                            <path
-                                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z" />
-                                        </svg>
-                                    </div>
-                                </div>
-                                <p class="hidden text-xs text-red-600 mt-2" id="confirm-password-error">Password does
-                                    not match the password</p>
                             </div>
                             <!-- End Form Group -->
 
